--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8701,11 +8701,18 @@ input, select, textarea {
 .popup-content {
     background: #e6d6f5; /* Light purple (lavender) */
     padding: 20px;
-    width: 300px;
+    width: 450px;
     border-radius: 10px;
     text-align: center;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     animation: fadeIn 0.5s ease-in-out;
+}
+
+.popup-image {
+    margin-top: 15px;
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
 }
 
 /* Close button */
@@ -8994,3 +9001,19 @@ section {
 	margin: 0;
 	font-size: 0.95em;
   }
+
+  .gallery.style2.medium.lightbox {
+  display: flex;
+    width: auto;
+    max-width: 100%;
+    max-height: 100%; /* You can reduce or increase this */
+    object-fit: contain; /* changed from 'cover' */
+    border-radius: 1rem;
+    margin-top: 1rem;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+
