--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9002,4 +9002,12 @@ section {
 	font-size: 0.95em;
   }
 
-
+#heartsCanvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 999;
+}
