--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9115,3 +9115,14 @@ section {
   margin-top: 10px;
   cursor: pointer;
 }
+
+#heartsCanvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 999;
+}
+
